--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{198BF8B5-9BDC-4A3C-306D-E9F6493E44A3}</ProjectGuid>
+	<ProjectGuid>{32DCBE45-8B4F-6A98-9525-532B46A1A6E1}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Accelerometer.cs" />
      <Compile Include="Assets\Scripts\Balls\Ball.cs" />
      <Compile Include="Assets\Scripts\Buttons\Button.cs" />
      <Compile Include="Assets\Scripts\Buttons\ButtonsControl.cs" />
