--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Accelerometer.cs" />
+     <Compile Include="Assets\Scripts\BallColor.cs" />
      <Compile Include="Assets\Scripts\Balls\Ball.cs" />
      <Compile Include="Assets\Scripts\Buttons\Button.cs" />
      <Compile Include="Assets\Scripts\Buttons\ButtonsControl.cs" />
