--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
      <Compile Include="Assets\Scripts\Balls\Ball.cs" />
      <Compile Include="Assets\Scripts\Balls\ColorBombBall.cs" />
      <Compile Include="Assets\Scripts\Balls\ISpecialBall.cs" />
+     <Compile Include="Assets\Scripts\Balls\UnbreakableBall.cs" />
      <Compile Include="Assets\Scripts\Buttons\Button.cs" />
      <Compile Include="Assets\Scripts\Buttons\ButtonsControl.cs" />
      <Compile Include="Assets\Scripts\Floor.cs" />
