--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,6 +49,8 @@
      <Compile Include="Assets\Scripts\Accelerometer.cs" />
      <Compile Include="Assets\Scripts\BallColor.cs" />
      <Compile Include="Assets\Scripts\Balls\Ball.cs" />
+     <Compile Include="Assets\Scripts\Balls\BallAnimation.cs" />
+     <Compile Include="Assets\Scripts\Balls\BigFatBall.cs" />
      <Compile Include="Assets\Scripts\Balls\ColorBombBall.cs" />
      <Compile Include="Assets\Scripts\Balls\ISpecialBall.cs" />
      <Compile Include="Assets\Scripts\Balls\UnbreakableBall.cs" />
