--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\Scripts\Balls\BallAnimation.cs" />
      <Compile Include="Assets\Scripts\Balls\BigFatBall.cs" />
      <Compile Include="Assets\Scripts\Balls\ColorBombBall.cs" />
+     <Compile Include="Assets\Scripts\Balls\FloodBall.cs" />
      <Compile Include="Assets\Scripts\Balls\ISpecialBall.cs" />
      <Compile Include="Assets\Scripts\Balls\UnbreakableBall.cs" />
      <Compile Include="Assets\Scripts\Buttons\Button.cs" />
